#3 Provide ability to override request model fields